# nexaOSweb

./: .gitignore  .prettierignore  CLAUDE.md  README.md  deploy.sh  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
services/brain/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/brain/app/: __init__.py  access.py  aggregate.py  audit.py  autonomy.py  dashboard.py  db.py  email.py  focus.py  gates.py  json_extract.py  main.py  offline.py  outcomes.py  project_modes.py  runtime.py  safety.py  seed.py  settings.py  util.py  zipcapture.py
services/brain/app/agents/: __init__.py  build_engine.py  builder.py  clarify.py  classify.py  context.py  cost.py  dreaming.py  executor.py  insights.py  orchestrator.py  process.py  project_editor.py  readiness.py  research.py  route.py  scheduler.py  slicer.py
services/brain/app/engine/: __init__.py  runner.py  worker.py  workspace.py
services/brain/app/models/: __init__.py  audit.py  base.py  dreaming.py  inbox.py  insight.py  knowledge.py  outcome.py  password_reset.py  project.py  provider.py  research.py  runtime.py  user.py  workspace.py
services/brain/app/router/: __init__.py  discovery.py  model_router.py
services/brain/app/routers/: agents.py  auth.py  dashboard.py  dreaming.py  flow.py  focus.py  insights.py  intake.py  integrations.py  journal.py  knowledge.py  model_config.py  projects.py  providers.py  research.py  (+6 more)
services/brain/config/: agents.yaml  models.yaml
services/brain/migrations/: env.py
services/brain/scripts/: create_user.py  dev.sh  dump_openapi.py  run_executor.py  seed_dashboard.py
services/brain/tests/: conftest.py  test_agent_audit.py  test_agent_backend.py  test_agent_build_run.py  test_agent_context.py  test_agent_cost.py  test_archive_endpoint.py  test_audit_producers.py  test_auth.py  test_autonomy.py  test_autonomy_gating.py  test_backend_selector.py  test_build_workspace.py  test_capture_mode.py  test_clarify.py  test_classify.py  test_codex_backend.py  test_credentials.py  test_dashboard.py  test_dreaming.py  test_executor.py  test_flow_aggregate.py  test_flow_edit.py  test_focus.py  test_gate_execute.py  test_gates.py  test_general_settings.py  test_grok_backend.py  test_insights.py  test_intake.py  test_integrations_skills.py  test_journal.py  test_journal_entries.py  test_journal_v2.py  test_knowledge_kinds.py  test_model_config.py  test_models.py  test_orchestrator.py  test_outcome_log.py  test_process.py  (+21 more)
(+201 files in other folders)
