[project]
name = "nexaosweb-brain"
version = "0.1.0"
description = "nexaOSweb Brain, the FastAPI backend for the Flow pipeline."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "email-validator>=2.2",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.12",
  "pyyaml>=6.0",
  "bcrypt>=4.1",
  "litellm>=1.51",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses these call expressions as default argument values by design.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Body",
  "fastapi.Form",
  "fastapi.File",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
